syntax = "proto3";

package stats.service.dashboard;

import "stats/messages/event_recommendation.proto";

option java_multiple_files = true;
option java_package = "ru.practicum.ewm.stats.proto";

service RecommendationsController {
  rpc GetRecommendationsForUser (stats.service.dashboard.UserPredictionsRequestProto)
      returns (stream stats.service.dashboard.RecommendedEventProto);

  rpc GetSimilarEvent (stats.service.dashboard.SimilarEventRequestProto)
      returns (stream stats.service.dashboard.RecommendedEventProto);

  rpc GetInteractionsCount (stats.service.dashboard.InteractionsCountRequestProto)
      returns (stream stats.service.dashboard.RecommendedEventProto);
}